syntax = "proto3";

package api.videoCore.service.v1;

option go_package = "lehu-video/api/videoCore/service/v1;v1";
option java_multiple_files = true;
option java_package = "api.videoCore.service.v1";
import "api/videoCore/service/v1/base.proto";

service FavoriteService {
	rpc AddFavorite(AddFavoriteReq)returns (AddFavoriteResp);
	rpc RemoveFavorite(RemoveFavoriteReq) returns (RemoveFavoriteResp);
	rpc ListFavorite(ListFavoriteReq) returns(ListFavoriteResp);
	rpc CountFavorite(CountFavoriteReq) returns (CountFavoriteResp);
	rpc IsFavorite(IsFavoriteReq) returns (IsFavoriteResp);
}


enum FavoriteTarget{
	VIDEO = 0;
	COMMENT = 1;
}

enum FavoriteType{
	FAVORITE = 0; // 点赞
	UNLIKE = 1; // 点踩
}

enum FavoriteAggregateType{
	BY_VIDEO = 0;
	BY_COMMENT = 1;
	BY_USER = 2;
}

message AddFavoriteReq{
	FavoriteTarget target = 1;
	FavoriteType type = 2;
	string id = 3;
	string user_id = 4;
}

message AddFavoriteResp{
	Metadata meta = 1;
}

message RemoveFavoriteReq{
	FavoriteTarget target = 1;
	FavoriteType type = 2;
	string id = 3;
	string user_id = 4;
}

message RemoveFavoriteResp{
	Metadata meta = 1;
}

message ListFavoriteReq{
	string id = 1;
	FavoriteAggregateType aggregate_type = 2;
	FavoriteType favorite_type = 3;
	PageStatsReq page_stats = 4;
}

message ListFavoriteResp{
	Metadata meta = 1;
	repeated string ids = 2;
	PageStatsResp page_stats = 3;
}


message CountFavoriteReq{
	FavoriteAggregateType aggregate_type = 1;
	repeated string ids = 2;
	FavoriteType favorite_type = 3;
}

message CountFavoriteRespItem{
	string biz_id = 1;
	int64 count = 2;
}

message CountFavoriteResp{
	Metadata meta = 1;
	repeated CountFavoriteRespItem items = 2;
}

message IsFavoriteReqItem{
	string biz_id = 1;
	string user_id = 2;

}

message IsFavoriteReq{
	FavoriteTarget target = 1;
	FavoriteType type = 2;
	repeated IsFavoriteReqItem items = 3;
}

message IsFavoriteRespItem{
	string biz_id = 1;
	string user_id = 2;
	bool is_favorite = 3;
}

message IsFavoriteResp{
	Metadata meta = 1;
	repeated IsFavoriteRespItem items = 2;
}










